--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "koa": "^2.7.0",
     "koa-route": "^3.2.0",
     "koa-views": "^6.2.0",
+    "mysql": "^2.17.1",
+    "sequelize": "^5.8.7",
     "typings": "^2.1.1"
   },
   "name": "koa_web",
@@ -75,6 +77,7 @@
     "is-generator-function": "^1.0.7",
     "keygrip": "^1.0.3",
     "koa-art-template": "^1.1.1",
+    "koa-body": "^4.1.0",
     "koa-compose": "^4.1.0",
     "koa-convert": "^1.2.0",
     "koa-is-json": "^1.0.0",
